--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Siva Rajamanickam / Home Page of Siva Rajamanickam"
+title                    : "Siva Rajamanickam"
 title_separator          : "-"
 name                     : &name "Siva Rajamanickam"
 description              : &description "Scientist"
